--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/WordPairGenerator/">
+  <base href="https://lawrence0324.github.io/WordPairGenerator/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -31,7 +31,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '207226497';
+    var serviceWorkerVersion = '1419417527';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
